--- a/Array_Cardio_1/index.html
+++ b/Array_Cardio_1/index.html
@@ -71,7 +71,7 @@
         "Biondo, Frank",
       ];
 
-// **********************************************************************************************************
+      // **********************************************************************************************************
 
       // 1. Filter the list of inventors for those who were born in the 1500's
 
@@ -90,13 +90,31 @@
       // using  Array.prototype.filter()
       // ===================================
 
-      const bornInFiftees = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600);
+      const bornInFiftees = inventors.filter(
+        (inventor) => inventor.year >= 1500 && inventor.year < 1600
+      );
       console.table(bornInFiftees);
 
- /***************************************************************************************************************
+      /*************************************************************************************************************/
+      //  2. Give us an array of the inventors first and last names
 
-      // Array.prototype.map()
-      // 2. Give us an array of the inventors first and last names
+      // using for loop
+      // ****************
+        let inventorsName = [];
+        for (let inventor of inventors) {
+          inventorsName.push(`${inventor.first} ${inventor.last}`);
+        }
+        console.table(inventorsName);
+
+      // using  Array.prototype.map()
+      // *****************************
+
+        const inventorsList = inventors.map(
+          (inventor) => `${inventor.first} ${inventor.last}`
+        );
+        console.table(inventorsList);
+
+      // ***************************************************************************************************************/
 
       // Array.prototype.sort()
       // 3. Sort the inventors by birthdate, oldest to youngest
