--- a/Array_Cardio_1/index.html
+++ b/Array_Cardio_1/index.html
@@ -93,31 +93,52 @@
       const bornInFiftees = inventors.filter(
         (inventor) => inventor.year >= 1500 && inventor.year < 1600
       );
-      console.table(bornInFiftees);
+      // console.table(bornInFiftees);
 
       /*************************************************************************************************************/
       //  2. Give us an array of the inventors first and last names
 
       // using for loop
       // ****************
-        let inventorsName = [];
-        for (let inventor of inventors) {
-          inventorsName.push(`${inventor.first} ${inventor.last}`);
-        }
-        console.table(inventorsName);
+      let inventorsName = [];
+      for (let inventor of inventors) {
+        inventorsName.push(`${inventor.first} ${inventor.last}`);
+      }
+      console.table(inventorsName);
 
       // using  Array.prototype.map()
       // *****************************
 
-        const inventorsList = inventors.map(
-          (inventor) => `${inventor.first} ${inventor.last}`
-        );
-        console.table(inventorsList);
+      const inventorsList = inventors.map(
+        (inventor) => `${inventor.first} ${inventor.last}`
+      );
+      // console.table(inventorsList);
+
+      /**********************************************************************************************************
+                          Sort the inventors by birthdate, oldest to youngest
+      ********************************************************************************************************/
+      // using for loop
+      //  ****************
+      let min;
+      for (let i = 0; i < inventors.length; i++) {
+        for (let j = i + 1; j < inventors.length; j++) {
+          if (inventors[i].year > inventors[j].year) {
+            min = inventors[i];
+            inventors[i] = inventors[j];
+            inventors[j] = min;
+          }
+        }
+      }
+      console.table([inventors]);
+
+      // using  Array.prototype.sort()
+      // *****************************
+
+
+
+      
 
       // ***************************************************************************************************************/
-
-      // Array.prototype.sort()
-      // 3. Sort the inventors by birthdate, oldest to youngest
 
       // Array.prototype.reduce()
       // 4. How many years did all the inventors live all together?
