use sort() method to sort inventor from oldest to youngest

--- a/Array_Cardio_1/index.html
+++ b/Array_Cardio_1/index.html
@@ -134,10 +134,8 @@
       // using  Array.prototype.sort()
       // *****************************
 
-
-
-      
-
+      const oldest = inventors.sort((a,b)=>a.year - b.year)
+      console.table([oldest])
       // ***************************************************************************************************************/
 
       // Array.prototype.reduce()
