Calculate total years lived using for loop

--- a/Array_Cardio_1/index.html
+++ b/Array_Cardio_1/index.html
@@ -134,13 +134,32 @@
       // using  Array.prototype.sort()
       // *****************************
 
-      const oldest = inventors.sort((a,b)=>a.year - b.year)
-      console.table([oldest])
+      const oldest = inventors.sort((a, b) => a.year - b.year);
+      console.table([oldest]);
       // ***************************************************************************************************************/
 
-      // Array.prototype.reduce()
-      // 4. How many years did all the inventors live all together?
+   // 4. How many years did all the inventors live all together?
 
+      // using for loop
+      const totalYearsLived = (inventors) => {
+        let totalAge = 0;
+        for (let inventor of inventors) {
+          const yearsLived = inventor.passed - inventor.year;
+          totalAge += yearsLived;
+        }
+        return totalAge;
+      };
+      console.log(totalYearsLived(inventors));
+
+      // Using Array.prototype.reduce()
+
+
+
+
+
+
+
+      //**************************************************************************************************/
       // 5. Sort the inventors by years lived
 
       // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
