--- a/Array_Cardio_1/index.html
+++ b/Array_Cardio_1/index.html
@@ -10,8 +10,6 @@
       // Get your shorts on - this is an array workout!
       // ## Array Cardio Day 1
 
-      // Some data we can work with
-
       const inventors = [
         { first: "Albert", last: "Einstein", year: 1879, passed: 1955 },
         { first: "Isaac", last: "Newton", year: 1643, passed: 1727 },
@@ -138,7 +136,7 @@
       console.table([oldest]);
       // ***************************************************************************************************************/
 
-   // 4. How many years did all the inventors live all together?
+      // 4. How many years did all the inventors live all together?
 
       // using for loop
       const totalYearsLived = (inventors) => {
@@ -153,11 +151,11 @@
 
       // Using Array.prototype.reduce()
 
-
-
-
-
-
+      const totalYears = inventors.reduce(
+        (total, inventor) => total + (inventor.passed - inventor.year),
+        0
+      );
+      console.log(totalYears);
 
       //**************************************************************************************************/
       // 5. Sort the inventors by years lived
