--- a/Array_Cardio_1/index.html
+++ b/Array_Cardio_1/index.html
@@ -195,7 +195,20 @@
       // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
       // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
-      //**************************************************************************************************/
+      const arrayList = document.querySelectorAll(".mw-category-group li");
+
+      const listOfBoulevards = (arrayList) => {
+        let filteredList = [];
+        for (let i = 0; i < arrayList.length; i++) {
+          let string = arrayList[i].textContent;
+          if (string.includes("de")) {
+            filteredList.push(string);
+          }
+        }
+        return filteredList;
+      };
+      console.log(listOfBoulevards(arrayList))
+      // **************************************************************************************************/
 
       // 7. sort Exercise
       // Sort the people alphabetically by last name
